--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -3,6 +3,14 @@ index:
     header:
         title: 'Découvrez, notez et partagez tous les coasters'
 
+map_index:
+    title: 'Carte des coasters'
+    manufacturer: 'Constructeur'
+    filter:
+        title: 'Filtres'
+        status: 'En fonctionnement'
+        notridden: 'Pas encore ridé'
+
 error:
     404:
         title: 'Page non trouvée'
