--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -42,6 +42,7 @@ map_index:
         notridden: 'Not ridden yet'
         averageRating: 'Average rating'
         atleast: 'at least'
+        openingDate: 'Opening date'
     results: 'Results'
 
 user_list:
