--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -2,11 +2,19 @@ app:
     name: 'Captain Coaster'
     title:
         default: 'Bienvenue !'
+    header:
+        search: 'Rechercher un coaster'
 
 index:
     title: 'Bienvenue !'
     header:
-        title: 'Découvrez, notez et partagez tous les coasters'
+        title: 'Découvrez, notez et partagez tous les coasters.'
+        info: 'Space Mountain, c''est vraiment Hyper ? Que pensent les connaisseurs d''Oziris au Parc Asterix ? Où sont les Intamin qui ouvriront l''année prochaine ? Pas de panique, toutes les réponses sont ici ! Et pour en profiter, c''est très rapide : <b>2 clics suffisent pour <a href="%link_path%">se connecter</a>.</b> Suivez le Captain !'
+    stats:
+        coasters: 'coasters'
+        ratings: 'notes'
+        rails: 'km de rails'
+        inversions: 'inversions'
 
 coaster:
     rating:
