--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -74,8 +74,11 @@ me:
         save: 'OK'
     badge: 'Badges'
 
-coaster_list:
-    top10: 'Le Top 10 Coaster de'
+liste:
+    title: 'Mon Top Coasters'
+    update: 'Modifier la liste'
+    find: 'Chercher un coaster...'
+    info: 'Commence par chercher un coaster là-haut, et le reste se fait tout seul en dessous ! Tu peux même changer l''ordre si t''es du genre indécis.'
 
 review:
     title: 'Avis'
@@ -96,6 +99,7 @@ navbar:
     profile: 'Mon Profil'
     rating: 'Mes Notes'
     logout: 'Se déconnecter'
+    topcoasters: 'Mon Top Coasters'
 
 sidebar:
     index: 'Accueil'
