--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -75,6 +75,8 @@ me:
     badge: 'Badges'
 
 liste:
+    list:
+        title: 'Les derniers Tops'
     title: 'Mon Top Coasters'
     update: 'Modifier la liste'
     find: 'Chercher un coaster...'
