--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -77,6 +77,9 @@ me:
 liste:
     list:
         title: 'Les derniers Tops'
+        more: 'Voir le détail'
+        updated: 'mis à jour'
+        by: 'par'
     title: 'Mon Top Coasters'
     update: 'Modifier la liste'
     find: 'Chercher un coaster...'
@@ -108,6 +111,7 @@ sidebar:
     coastersRanking: 'Meilleurs coasters'
     users: 'Palmarès des membres'
     map: 'Carte des coasters'
+    liste: 'Tops Coasters'
     news: 'Actualités'
     forum: 'Forum'
     logout: 'Se déconnecter'
