--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -32,6 +32,8 @@ Confort: 'Smooth'
 Vitesse: 'Speed'
 Fun: 'Fun'
 Chef d'oeuvre: 'Masterpiece'
+Intensité: 'Intense'
+Temps mort: 'Dead spots'
 
 Aucun: 'None'
 Flying Coaster: 'Flying Coaster'
