--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -32,6 +32,8 @@ Confort: 'Confort'
 Vitesse: 'Vitesse'
 Fun: 'Fun'
 Chef d'oeuvre: 'Chef d''oeuvre'
+Intensité: 'Intensité'
+Temps mort: 'Temps mort'
 
 Aucun: 'Aucun'
 Flying Coaster: 'Flying Coaster'
