--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -42,9 +42,12 @@ coaster:
     photos: 'Photos'
     location: 'Localisation'
 
+park:
+    opened_coasters: 'coaster ouvert|coasters ouverts'
+
 coaster_ranking:
     title: 'Classement des meilleurs coasters'
-    reviews_number: 1 note|%count% notes
+    reviews_number: '1 note|%count% notes'
 
 map_index:
     title: 'Carte des coasters'
@@ -64,7 +67,7 @@ user_list:
         title: 'Alors, t''en es où dans tes notes ?'
         text: 'Ce classement te permet de savoir où tu te situes sur l''ensemble des membres qui ont noté des coasters, mais aussi de voir le détail de leurs notes !'
     member_from: 'Membre depuis le'
-    rating: 1 note|%count% notes
+    rating: '1 note|%count% notes'
 
 me:
     title: 'Mon Profil'
