update label save list

--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -85,6 +85,7 @@ liste:
         by: 'by'
     title: 'My Top Coasters'
     update: 'Update the list'
+    save: 'Save the list'
     find: 'Find a coaster...'
     info: 'Start by searching a coaster up there, then the magic happens below. You can even drag and drop lines if you are undecided.'
 
