--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -97,7 +97,7 @@ review:
     pros: 'Quels sont les principaux atouts de ce coaster ?'
     cons: 'Et ses principaux défauts ?'
     comment: 'Envie d''être encore plus précis, raconte-nous ça !'
-    button: 'Envoyer mon avis'
+    send: 'Envoyer mon avis'
     update: 'Modifier mon avis'
     last: 'Derniers avis'
 
