add translations tags

--- a/app/Resources/translations/database.en.yml
+++ b/app/Resources/translations/database.en.yml
@@ -10,30 +10,32 @@ Propulsion à câble (pneumatique): 'Compressed air launch'
 Propulsion à pneus: 'Tire propelled launch'
 Propulsion électrique: 'Electrical launch'
 
-Vibrations: 'Vibrations'
-Baffes: 'Hurts'
+Vibrations: 'Rattle'
+Baffes: 'Headbanging'
 Trop court: 'Too short'
 Pas de théma: 'No theming'
 Débit: 'Capacity'
 Harnais: 'Restraints'
 Inversions: 'Inversions'
-Déception !: 'Disappointing !'
+Déception !: 'Disappointing!'
 Inconfort: 'Discomfort'
 Launch: 'Launch'
-A raser !: 'To be destroyed !'
-Sans intérêt: 'Useless'
+A raser !: 'Tear it down!'
+Sans intérêt: 'Pointless'
 Airtimes: 'Airtimes'
 First drop: 'First Drop'
 Théma: 'Theming'
 Lap Bar: 'Lap Bar'
-Bonne suprise !: 'Nice surprise !'
-Situation: 'Environment'
-Confort: 'Smooth'
-Vitesse: 'Speed'
+Bonne suprise !: 'Nice surprise!'
+Situation: 'Location'
+Confort: 'Comfort'
+Vitesse: 'Pace'
 Fun: 'Fun'
 Chef d'oeuvre: 'Masterpiece'
-Intensité: 'Intense'
+Intensité: 'Intensity'
 Temps mort: 'Dead spots'
+Fluidité: 'Smoothness'
+Layout: 'Layout'
 
 Aucun: 'None'
 Flying Coaster: 'Flying Coaster'
