--- a/app/Resources/translations/database.fr.yml
+++ b/app/Resources/translations/database.fr.yml
@@ -34,6 +34,8 @@ Fun: 'Fun'
 Chef d'oeuvre: 'Chef d''oeuvre'
 Intensité: 'Intensité'
 Temps mort: 'Temps mort'
+Fluidité: 'Fluidité'
+Layout: 'Layout'
 
 Aucun: 'Aucun'
 Flying Coaster: 'Flying Coaster'
