add contact form

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -117,7 +117,7 @@ sidebar:
     users: 'Palmarès des membres'
     map: 'Carte des coasters'
     liste: 'Tops Coasters'
-    news: 'Actualités'
+    contact: 'Nous contacter'
     forum: 'Forum'
     logout: 'Se déconnecter'
     login: 'Se connecter'
@@ -131,6 +131,17 @@ login:
     already_connected_as: 'Déjà connecté en tant que'
     logout: 'Se deconnecter ?'
 
+contact:
+    title: 'Nous contacter'
+    send: 'Envoyer le message'
+    form:
+        name: 'Ton nom'
+        email: 'Indique ici un email si tu souhaites recevoir une réponse'
+        message: 'Ecris nous ton poème juste en dessous'
+    email:
+        title: 'Form contact Captain Coaster'
+    flash:
+        success: 'Merci %name%, ton email a été envoyé à l''équipe de Captain Coaster.'
 
 error:
     404:
