--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -90,7 +90,6 @@ liste:
     find: 'Find a coaster...'
     info: 'Start by searching a coaster up there, then the magic happens below. You can even drag and drop lines if you are undecided.'
 
-
 review:
     title: 'Reviews'
     share: 'Share your opinion with us !'
@@ -118,7 +117,7 @@ sidebar:
     users: 'User''s ranking'
     map: 'Coasters map'
     liste: 'Tops Coasters'
-    news: 'News'
+    contact: 'Get in touch'
     forum: 'Forum'
     logout: 'Logout'
     login: 'Login'
@@ -131,6 +130,18 @@ login:
         text: 'You can login using your Facebook or Google account. We only gather your name, email and profile picture.'
     already_connected_as: 'Already logged in as'
     logout: 'Logout ?'
+
+contact:
+    title: 'Get in touch'
+    send: 'Send the message'
+    form:
+        name: 'Your name'
+        email: 'Enter your email here if you want us to answer'
+        message: 'Your message'
+    email:
+        title: 'Form contact Captain Coaster'
+    flash:
+        success: 'Thank you %name%, your message was sent to Captain Coaster staff.'
 
 error:
     404:
