add terms of use

--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -140,7 +140,7 @@ sidebar:
     map: 'Carte des coasters'
     liste: 'Tops Coasters'
     contact: 'Nous contacter'
-    forum: 'Forum'
+    terms: 'Mentions légales'
     logout: 'Se déconnecter'
     login: 'Se connecter'
 
