--- a/app/Resources/translations/messages.en.yml
+++ b/app/Resources/translations/messages.en.yml
@@ -140,7 +140,7 @@ sidebar:
     map: 'Coasters map'
     liste: 'Tops Coasters'
     contact: 'Get in touch'
-    forum: 'Forum'
+    terms: 'Terms of Use'
     logout: 'Logout'
     login: 'Login'
 
