--- a/app/Resources/translations/messages.fr.yml
+++ b/app/Resources/translations/messages.fr.yml
@@ -24,6 +24,7 @@ coaster:
         mustlogin: 'Il faut être connecté pour noter.'
         login: 'Se connecter'
         sendreview: 'ou clique ici pour donner ton avis'
+        text: 'Score basé sur %count_rating% notes et %count_top% tops'
     infos:
         title: 'Caractéristiques de %name%'
         status: 'Statut'
@@ -49,6 +50,9 @@ park:
 coaster_ranking:
     title: 'Classement des meilleurs coasters'
     reviews_number: '1 note|%count% notes'
+    info:
+        title: 'Ici, on ne contente pas de la moyenne de vos notes !'
+        text: 'Découvre notre nouveau classement des coasters, basé sur un algorithme super-complexe de la NASA qui prend en compte l''ensemble des notes de chaque coaster, son placement dans les Top Coasters et quelques ingrédients maison...'
 
 map_index:
     title: 'Carte des coasters'
